--- a/reference/1.tex
+++ b/reference/1.tex
@@ -1,2 +1,34 @@
-[0,128,192,64,96,224,160,32,48,176,240,112,80,208,144,16,24,152,216,88,120,248,184,56,40,168,232,104,72,200,136,8,12,140,204,76,108,236,172,44,60,188,252,124,92,220,156,28,20,148,212,84,116,244,180,52,36,164,228,100,68,196,132,4,6,134,198,70,102,230,166,38,54,182,246,118,86,214,150,22,30,158,222,94,126,254,190,62,46,174,238,110,78,206,142,14,10,138,202,74,106,234,170,42,58,186,250,122,90,218,154,26,18,146,210,82,114,242,178,50,34,162,226,98,66,194,130,2,3,131,195,67,99,227,163,35,51,179,243,115,83,211,147,19,27,155,219,91,123,251,187,59,43,171,235,107,75,203,139,11,15,143,207,79,111,239,175,47,63,191,255,127,95,223,159,31,23,151,215,87,119,247,183,55,39,167,231,103,71,199,135,7,5,133,197,69,101,229,165,37,53,181,245,117,85,213,149,21,29,157,221,93,125,253,189,61,45,173,237,109,77,205,141,13,9,137,201,73,105,233,169,41,57,185,249,121,89,217,153,25,17,145,209,81,113,241,177,49,33,161,225,97,65,193,129,1]
-[0,128,64,192,96,224,32,160,80,208,16,144,48,176,112,240,120,248,56,184,24,152,88,216,40,168,104,232,72,200,8,136,68,196,4,132,36,164,100,228,20,148,84,212,116,244,52,180,60,188,124,252,92,220,28,156,108,236,44,172,12,140,76,204,102,230,38,166,6,134,70,198,54,182,118,246,86,214,22,150,30,158,94,222,126,254,62,190,78,206,14,142,46,174,110,238,34,162,98,226,66,194,2,130,114,242,50,178,18,146,82,210,90,218,26,154,58,186,122,250,10,138,74,202,106,234,42,170,85,213,21,149,53,181,117,245,5,133,69,197,101,229,37,165,45,173,109,237,77,205,13,141,125,253,61,189,29,157,93,221,17,145,81,209,113,241,49,177,65,193,1,129,33,161,97,225,105,233,41,169,9,137,73,201,57,185,121,249,89,217,25,153,51,179,115,243,83,211,19,147,99,227,35,163,3,131,67,195,75,203,11,139,43,171,107,235,27,155,91,219,123,251,59,187,119,247,55,183,23,151,87,215,39,167,103,231,71,199,7,135,15,143,79,207,111,239,47,175,95,223,31,159,63,191,127,255]
+\begin{table*}[!t]
+	\centering
+\renewcommand{\arraystretch}{1}
+	\captionsetup{font={footnotesize}}
+\caption{The MRED of ISC-MUL based on different truncation widths }
+\label{ Design of SC Module}
+	\small %
+	\resizebox{1\textwidth}{!}{
+		\begin{threeparttable}
+			\begin{tablenotes} %添加此处
+				\scriptsize
+				\item *: The lowest MRED under different length of Sobol Sequence. 
+			\end{tablenotes} %添加此处
+			\begin{tabular}{|c|cccccccccccccc|}
+				\hline
+				\multirow{2}{*}{The length of bitstream} & \multicolumn{14}{c|}{Width of comparator} \\ \cline{2-15} 
+				 & \multicolumn{1}{c|}{3} & \multicolumn{1}{c|}{4} & \multicolumn{1}{c|}{5} & \multicolumn{1}{c|}{6} & \multicolumn{1}{c|}{7} & \multicolumn{1}{c|}{8} & \multicolumn{1}{c|}{9} & \multicolumn{1}{c|}{10} & \multicolumn{1}{c|}{11} & \multicolumn{1}{c|}{12} & \multicolumn{1}{c|}{13} & \multicolumn{1}{c|}{14} & \multicolumn{1}{c|}{15} & 16 \\ \hline
+				8 & \multicolumn{1}{c|}{14.71\%} & \multicolumn{1}{c|}{9.57$^*$\%} & \multicolumn{1}{c|}{13.13\%} & \multicolumn{1}{c|}{16.49\%} & \multicolumn{1}{c|}{18.55\%} & \multicolumn{1}{c|}{19.64\%} & \multicolumn{1}{c|}{20.18\%} & \multicolumn{1}{c|}{20.48\%} & \multicolumn{1}{c|}{20.64\%} & \multicolumn{1}{c|}{20.72\%} & \multicolumn{1}{c|}{20.75\%} & \multicolumn{1}{c|}{20.76\%} & \multicolumn{1}{c|}{20.77\%} & 20.77\% \\ \hline
+				16 & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{8.41\%} & \multicolumn{1}{c|}{5.03$^*$\%} & \multicolumn{1}{c|}{6.33\%} & \multicolumn{1}{c|}{7.79\%} & \multicolumn{1}{c|}{8.64\%} & \multicolumn{1}{c|}{9.11\%} & \multicolumn{1}{c|}{9.35\%} & \multicolumn{1}{c|}{9.47\%} & \multicolumn{1}{c|}{9.53\%} & \multicolumn{1}{c|}{9.56\%} & \multicolumn{1}{c|}{9.57\%} & \multicolumn{1}{c|}{9.57\%} & 9.58\% \\ \hline
+				32 & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{4.41\%} & \multicolumn{1}{c|}{2.74$^*$\%} & \multicolumn{1}{c|}{3.34\%} & \multicolumn{1}{c|}{4.01\%} & \multicolumn{1}{c|}{4.42\%} & \multicolumn{1}{c|}{4.64\%} & \multicolumn{1}{c|}{4.75\%} & \multicolumn{1}{c|}{4.80\%} & \multicolumn{1}{c|}{4.83\%} & \multicolumn{1}{c|}{4.84\%} & \multicolumn{1}{c|}{4.85\%} & 4.85\% \\ \hline
+				64 & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{---} & \multicolumn{1}{c|}{2.27\%} & \multicolumn{1}{c|}{1.48$^*$\%} & \multicolumn{1}{c|}{1.77\%} & \multicolumn{1}{c|}{2.08\%} & \multicolumn{1}{c|}{2.28\%} & \multicolumn{1}{c|}{2.39\%} & \multicolumn{1}{c|}{2.44\%} & \multicolumn{1}{c|}{2.46\%} & \multicolumn{1}{c|}{2.48\%} & \multicolumn{1}{c|}{2.48\%} & 2.48\% \\ \hline
+				\end{tabular}
+		\end{threeparttable} %添加此处
+		}
+\label{MRED}
+\end{table*}
+
+
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[]
+
+	\end{table}
